--- a/ToDoList_CodePen.html
+++ b/ToDoList_CodePen.html
@@ -63,3 +63,52 @@
     </script>
 </body>
 </html>
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do List</title>
+</head>
+<body>
+    <h1>To-Do List</h1>
+    <input type="text" id="taskInput" placeholder="Add a new task">
+    <button id="addButton">Add Task</button>
+    <ul id="taskList"></ul>
+
+    <script>
+        const addButton = document.getElementById('addButton');
+        const taskList = document.getElementById('taskList');
+
+        addButton.addEventListener('click', () => {
+            const taskInput = document.getElementById('taskInput');
+            const taskText = taskInput.value.trim();
+            if (taskText) {
+                const li = document.createElement('li');
+                li.innerHTML = `
+                    ${taskText}
+                    <button onclick="editTask(this)">Edit</button>
+                    <button onclick="deleteTask(this)">Delete</button>
+                `;
+                taskList.appendChild(li);
+                taskInput.value = '';
+            }
+        });
+
+        function deleteTask(button) {
+            button.parentElement.remove();
+        }
+
+        function editTask(button) {
+            const li = button.parentElement;
+            const newText = prompt('Edit your task:', li.firstChild.textContent.trim());
+            if (newText) {
+                li.firstChild.textContent = newText;
+            }
+        }
+    </script>
+</body>
+</html> -->
